<resources>
    <string name="app_name">RoseProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="password">Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign-in</string>
    <string name="team_name">Team Name</string>
    <string name="insert_team_name">Insert Team Name</string>
    <string name="team_description">Team Description</string>
    <string name="enter_team_description">Enter Team Description</string>
    <string name="team_members">Team Members</string>
    <string name="add_or_remove_team_members">Add or Remove Team Members</string>
    <string name="project_name">Project Name</string>
    <string name="project_description">Project Description</string>
    <string name="enter_project_name">Enter Project Name</string>
    <string name="enter_project_description">Enter Project Description</string>
    <string name="enter_task_name">Enter Task Name</string>
    <string name="task_name">Task Name</string>
    <string name="urgency">Urgency</string>
    <string name="enter_urgency_1_10">Enter Urgency 1–10</string>
    <string name="assign_task">Assign Task</string>
    <string name="enter_username_input">Enter Username</string>
    <string name="status">Status</string>
    <string name="task_log">Task Log</string>
    <string name="log_hours">Log Hours</string>
    <string name="hrs"># hrs</string>
    <string name="submit_time">Submit Time</string>
    <string name="member_username">Member Username</string>
    <string name="user_permission_level">User Permission Level</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="menu_welcome">welcome</string>
    <string name="deleteTask">Delete Task?</string>
    <string name="deleteTaskMessage">Are you sure you want to delete this task?</string>
    <string name="deleteProject">Delete Project?</string>
    <string name="deleteProjectMessage">Are you sure you want to delete this project?</string>
    <string name="logout_confirmation">Are you sure you want to log out?</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <string name="create_new_team">Create New Team</string>
    <string name="project_title">Project Title</string>
    <string name="logout">Logout</string>
    <string name="team_membership">Team Membership</string>
    <string name="welcome_to_rose_projects">Welcome to Rose Projects!</string>
    <string name="info_prompt">Please enter in your information.</string>
    <string name="first_name">First Name</string>
    <string name="enter_your_first_name">Enter Your First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter Your Username</string>
    <string name="enter_your_last_name">Enter Your Last Name</string>
    <string name="choose_your_picture">Choose your picture</string>
    <string name="done">Done</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="google">Google</string>
    <string name="rosefire">Rosefire</string>
    <string name="export_dialog_title">Do you want to export team data?</string>
    <string name="no_permission">You do not have this permission!</string>
    <string-array name="task_status_array">
        <item>Not Started</item>
        <item>Ongoing</item>
        <item>Completed</item>
        <item>Halted</item>
    </string-array>

    <string-array name="member_Permissions">
        <item>Member</item>
        <item>Admin/Owner</item>
    </string-array>

    <string name="Delete">Delete</string>
    <string name="Remove">Remove</string>
    <string name="Save">Save</string>
    <string name="create_project">Create Project</string>
    <string name="edit_project">Edit Project</string>
    <string name="create_team">Create Team</string>
    <string name="edit_team">Edit Team</string>
    <string name="create_task">Create Task</string>
    <string name="edit_task">Edit Task</string>

    <string name="Yes">Yes</string>
    <string name="No">No</string>

    <string name="addRemoveMember">Add/Remove Member</string>
    <string name="deleteTeam1">Are you sure you want to delete this team?</string>
    <string name="deleteTeam2">You cannot undo this operation. Tap OK to delete or CANCEL to leave.</string>
    <string name="emptyFields">Fields cannot be empty. Please re-enter your information.</string>
    <string name="uniqueUser">This username already exists. Please enter a new one.</string>
    <string name="todo">TODO</string>
    <string name="your_tasks">Your Tasks</string>
    <string name="task_title">Task Title</string>
    <string name="assigned">Assigned</string>
</resources>