<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="Autofill">

    <TextView
        android:id="@+id/welcome_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_rose_projects"
        android:textSize="35sp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/prompt_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_prompt"
        android:textSize="20sp"
        android:layout_below="@id/welcome_text_view"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/first_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/prompt_text_view"/>

    <EditText
        android:id="@+id/edit_first_name_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_first_name"
        android:inputType="textCapWords"
        android:textSize="24sp"
        android:layout_below="@id/first_name_text_view"/>
    <TextView
        android:id="@+id/last_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textSize="25sp"
        android:layout_below="@id/edit_first_name_view"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:id="@+id/edit_last_name_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_last_name"
        android:inputType="textCapWords"
        android:textSize="24sp"
        android:layout_below="@id/last_name_text_view"/>
    <TextView
        android:id="@+id/new_username_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="25sp"
        android:layout_below="@id/edit_last_name_view"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:id="@+id/edit_username_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_username"
        android:inputType="textCapWords"
        android:textSize="24sp"
        android:layout_below="@id/new_username_text_view"/>
    <TextView
        android:id="@+id/picture_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_picture"
        android:textSize="25sp"
        android:layout_below="@id/edit_username_view"
        android:layout_centerHorizontal="true"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/profile_button_view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:src="@drawable/default_profile_img"
        android:layout_below="@id/picture_name_text_view"
        android:background="@color/white"
        android:layout_centerHorizontal="true"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:textSize="26sp"
        app:backgroundTint="#090"
        android:layout_below="@id/profile_button_view"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>