<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/sign_in_img"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="70sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/login_button_email"
        android:layout_marginBottom="40dp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/login_button_email"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="30sp"
        android:textColor="#800000"
        android:layout_above="@id/login_button_google"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/white"
        />

    <Button
        android:id="@+id/login_button_google"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/google"
        android:textSize="30sp"
        android:textColor="#800000"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/white"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/login_button_rose"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/rosefire"
        android:textSize="30sp"
        android:textColor="#800000"
        android:layout_below="@id/login_button_google"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/white"
        android:layout_marginTop="10dp"
        />
</RelativeLayout>